force-app/main/default/objects/Error_Log__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>Unique number of the error log.</description>
    <displayFormat>A-{0000}</displayFormat>
    <inlineHelpText>Error log number</inlineHelpText>
    <label>Log #</label>
    <type>AutoNumber</type>
</CustomField>