force-app/main/default/objects/Error_Log__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Date_Time__c</fullName>
    <description>Date and time of the error log.</description>
    <inlineHelpText>Error log date and time</inlineHelpText>
    <label>Log Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>